# tabletennis_GUI

./: CMakeLists.txt  README.md  ballprops.cpp  ballprops.h  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pingpongtablearea.cpp  pingpongtablearea.h  tools.cpp  tools.h  tracking.pro  ui_mainwindow.h
test/: CMakeLists.txt  main.cpp
